--- a/package.json
+++ b/package.json
@@ -8,16 +8,25 @@
     "devstart": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["whiteboard", "socket.io", "collaboration", "shareable"],
+  "keywords": [
+    "whiteboard",
+    "socket.io",
+    "collaboration",
+    "shareable"
+  ],
   "author": "Akshit Batra",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "url": "^0.11.0",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
